added automated/auto generated weekly newsletters

--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -18,7 +18,7 @@
 
 /* Main Footer */
       footer .main-footer
-      {	padding: 20px 0;	background: #252525;}
+      {	padding: 20px 0;	background: #fff;}
       footer ul
       {	padding-left: 0;	list-style: none;}
       .footer-copyright
@@ -55,13 +55,13 @@
         .widget.no-box{	padding: 0;	background-color: transparent;	margin-bottom: 40px;
             box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; -o-box-shadow: none;}
         .widget.subscribe p{	margin-bottom: 18px;}
-        .widget li a{	color: #ff8d1e;}
-        .widget li a:hover{	color: #4b92dc;}
+        .widget li a{	color: #000;}
+        .widget li a:hover{	color: #000;}
         .widget-title {margin-bottom: 20px;}
-        .widget-title span {background: #839FAD none repeat scroll 0 0;display: block; height: 1px;margin-top: 25px;position: relative;width: 20%;}
+        .widget-title span {background: #000 none repeat scroll 0 0;display: block; height: 1px;margin-top: 25px;position: relative;width: 20%;}
         .widget-title span::after {background: inherit;content: "";height: inherit;    position: absolute;top: -4px;width: 50%;}
         .widget-title.text-center span,.widget-title.text-center span::after {margin-left: auto;margin-right:auto;left: 0;right: 0;}
-        .widget .badge{	float: right;	background: #7f7f7f;}
+        .widget .badge{	float: right;	background: #000;}
 
         .typo-light h1,
         .typo-light h2,
@@ -72,14 +72,14 @@
         .typo-light p,
         .typo-light div,
         .typo-light span,
-        .typo-light small{	color: #fff;}
+        .typo-light small{	color: #000;}
 
         ul.social-footer2 {	margin: 0;padding: 0;	width: auto;}
         ul.social-footer2 li {display: inline-block;padding: 0;}
-        ul.social-footer2 li a:hover {background-color:#ff8d1e;}
-        ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: center;}
-        .btn{background-color: #ff8d1e; color:#fff;}
-        .btn:hover, .btn:focus, .btn.active {background: #4b92dc;color: #fff;
+        ul.social-footer2 li a:hover {background-color:#000;}
+        ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: center;background-color:#000;}
+        .btn{background-color: #000; color:#fff;}
+        .btn:hover, .btn:focus, .btn.active {background: #000;color: #fff;
         -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
         -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
         -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
@@ -286,50 +286,6 @@ body {
   </style>
   </head>
   <body class="">
-<div data-component="cta-newsletter-modal">
-  <div class="modal fade" id="newsletter-modal">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-0 border-0">
-        <button type="button" class="close ml-1" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <div class="modal-body py-0">
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-0">
-              <div class="p-3 wrap">
-                <div class="pl-3 py-3 modal-container">
-                  <div>
-                    <h6 class="modal-subtitle mb-3">STAY CURRENT</h6>
-                    <h4 class="modal-title"><span>Sign Up</span> For <br>Our Newsletter</h4>
-                    <hr>
-                    <p class="modal-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-                    <div class="hide">
-                      <button class="btn btn-block rounded-0 border-0 btn-primary">
-  <span>SUBSCRIBE USING FACEBOOK</spam></button>
-                      <button class="btn btn-block rounded-0 border-0 btn-secondary" id="btn-form">
-  <span>SUBSCRIBE USING EMAIL</span></button>
-                    </div> <!-- /.hide -->
-                    <div class="show">
-                      <form>
-                        <div class="form-group mb-2">
-                          <input type="email" class="form-control rounded-0 border-0" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email address">
-                        </div>
-                        <button class="btn btn-block btn-success rounded-0 border-0">Subscribe</button>
-                      </form>
-                    </div> <!-- /.show -->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pr-0">
-              <img src="https://res.cloudinary.com/dt9b7pad3/image/upload/v1493819606/newsletter_left_image_nzdpnw.png">
-            </div>
-          </div><!-- /.row -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/">Movies Hove</a>
